--- a/LSTM_TIHM_Dataset.ipynb
+++ b/LSTM_TIHM_Dataset.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1YNJ4oRLvMJTgZTQl32EGoS14E_nOJ_cr",
-      "authorship_tag": "ABX9TyNOP/ziPgFDY+n/5e33IZN1",
+      "authorship_tag": "ABX9TyM2/7o2j/Fldf61MMk+Ka61",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -849,10 +849,69 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Model**"
+      ],
+      "metadata": {
+        "id": "ZfeED4xqgIF3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = Sequential([\n",
+        "    LSTM(50, return_sequences=True, input_shape=(time_steps, X_train.shape[2])),\n",
+        "    Dropout(0.2),\n",
+        "    LSTM(50, return_sequences=False),\n",
+        "    Dropout(0.2),\n",
+        "    Dense(1, activation='sigmoid')\n",
+        "])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lGx_mjyZd8rN",
+        "outputId": "6c79b39f-5de3-401d-98ec-c0bccdad6e24"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/keras/src/layers/rnn/rnn.py:200: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+            "  super().__init__(**kwargs)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Compile Model**"
+      ],
+      "metadata": {
+        "id": "ajvNs_ZqgYgf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])"
+      ],
+      "metadata": {
+        "id": "VCheYmxmgKOe"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "lGx_mjyZd8rN"
+        "id": "X06d49yAgbcp"
       },
       "execution_count": null,
       "outputs": []
